compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__todo__piped.snap
---
source: compiler-core/src/erlang/tests/todo.rs
expression: "\n     pub fn main() {\n      \"lets\"\n      |> todo as \"pipe\"\n      |> todo as \"other todo\"\n    }\n    "
---
----- SOURCE CODE

     pub fn main() {
      "lets"
      |> todo as "pipe"
      |> todo as "other todo"
    }
    

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> any().
main() ->
    _pipe = ~"lets",
    _pipe@1 = (erlang:error(#{
        gleam_error => todo,
        message => ~"pipe",
        file => ~"project/test/my/mod.gleam",
        module => ~"my/mod",
        function => ~"main",
        line => 4
    }))(_pipe),
    (erlang:error(#{
        gleam_error => todo,
        message => ~"other todo",
        file => ~"project/test/my/mod.gleam",
        module => ~"my/mod",
        function => ~"main",
        line => 5
    }))(_pipe@1).
