compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__todo__todo_as.snap
---
source: compiler-core/src/erlang/tests/todo.rs
expression: "\npub fn main() {\n  todo as \"wibble\"\n}\n"
---
----- SOURCE CODE

pub fn main() {
  todo as "wibble"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> any().
main() ->
    erlang:error(#{
        gleam_error => todo,
        message => ~"wibble",
        file => ~"project/test/my/mod.gleam",
        module => ~"my/mod",
        function => ~"main",
        line => 3
    }).
